"Testrail methods commented on utilitescommon class, removed docker ignore and Updated Sanity suite"
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/src/test/resources/TestData/TestData.yaml
+++ b/src/test/resources/TestData/TestData.yaml
@@ -71,8 +71,9 @@ SanityInspectionTest:
  - testCreateInspection:
     InspectionHeader: "Inspection Management"
     NewInspectionCreatedToastMessage: "Inspection completed."
-SanityInventoryTest:
- - testNewPartCreation:
+SanityBateelAddToCart:
+ - testBateeladdtocartitem:
+    productName: "Stella Green Tree Gift Box"
 SanityBateelProductDetails:
  - testBateelproductfilldetails:
     productName: "Stella Green Tree Gift Box"
