--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,27 +3,43 @@ name: CI/CD
 on:
   push:
     branches:
-      - development
+      - IAT-4
 
 jobs:
   build:
     runs-on: windows-latest
 
-    env:
-      XML_PATH: src/test/resources
-      SUITE_XML_FILE: LocalTestSuite.xml
-      ENVIRONMENT: QA
-      BROWSER: chrome
-      DEFAULT_TIMEOUT: 30
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        ref: ${{ github.head_ref }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: IAT-4  # Checkout the IAT-4 branch
 
-    - name: Set up JDK
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt'
-        java-version: '17'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Install Allure CLI
+        run: npm install -g allure-commandline
+
+      - name: Run Tests and Generate Allure Report
+        run: |
+          mvn clean test
+          mvn allure:report
+
+      - name: Convert Allure Report to HTML
+        run: |
+          allure generate allure-results --clean -o allure-report-html
+
+      - name: Upload HTML Allure Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: allure-html-report
+          path: allure-report-html
+
+      - name: Set Allure HTML report link 
+        if: success()
+        run: |
+          echo "::set-output name=allure_html_report_link::https://github.com/SohamQAKrish/Bateel_Automation/tree/IAT-4/allure-results"
