--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+.dockerignore
+.settings/org.testng.eclipse.maven.prefs
+allure-results/
+target/classes/META-INF/MANIFEST.MF
+target/surefire-reports/
+target/test-classes/TestData/RestAssuredData.xlsx
+test-output/junitreports/
