--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,13 +31,13 @@ jobs:
 
       - name: Convert Allure Report to HTML
         run: |
-          allure generate allure-results --clean -o allure-report-html
+          allure generate allure-results --clean -o allure-html-report
 
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
         with:
-          name: allure-html-report
-          path: allure-report-html
+          name: allure-report-html
+          path: allure-html-report
 
       - name: Set Allure HTML report link 
         if: success()
