--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 		<dependency>
 			<groupId>io.qameta.allure</groupId>
 			<artifactId>allure-testng</artifactId>
-			<version>2.19.0</version>
+			<version>2.27.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
 		<dependency>
@@ -174,27 +174,42 @@
                 <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
             </configuration>
         </plugin>
-        <!-- Add Allure plugin -->
+        
         <plugin>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-maven</artifactId>
             <version>2.12.0</version>
             <configuration>
-                <resultsDirectory>${project.basedir}/allure-results</resultsDirectory>
+                <!-- Specify the directory to generate the Allure report -->
+        <reportDirectory>${project.basedir}/allure-report-html</reportDirectory>
+            </configuration>
+            <!-- Bind the Allure Maven plugin to the site phase -->
+            <executions>
+                <execution>
+                    <id>allure-report</id>
+                    <phase>site</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        
+        <!-- Maven compiler plugin configuration -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.7.0</version>
+            <configuration>
+                <!-- Set compiler version to 17 -->
+                <compilerVersion>17</compilerVersion>
+                <source>17</source>
+                <target>17</target>
+                <testSource>17</testSource>
+                <testTarget>17</testTarget>
             </configuration>
         </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <compilerVersion>17</compilerVersion>
-                    <source>17</source>
-                    <target>17</target>
-                    <testSource>17</testSource>
-                    <testTarget>17</testTarget>
-                </configuration>
-            </plugin>
+    
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -225,6 +240,6 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
+       </plugins>
     </build>
 </project>
