--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,10 +29,6 @@ jobs:
           mvn clean test
           mvn allure:report
 
-      - name: Convert Allure Report to HTML
-        run: |
-          allure generate allure-results --clean -o allure-report-html
-
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
         with:
@@ -42,5 +38,4 @@ jobs:
       - name: Set Allure HTML report link 
         if: success()
         run: |
-          
-              echo "::set-output name=allure_html_report_link::https://github.com/SohamQAKrish/Bateel_Automation/tree/IAT-4/allure-results"
+          echo "::set-output name=allure_html_report_link::https://github.com/SohamQAKrish/Bateel_Automation/tree/IAT-4/allure-report-html/index.html"
