"This commit is for main navigation menu links verification"
Signed-off-by: Rammohan <rammohan@krishtechnolabs.com>

--- a/src/test/resources/TestData/TestData.yaml
+++ b/src/test/resources/TestData/TestData.yaml
@@ -91,4 +91,10 @@ SanityBateelLoginAndNavigationTest:
 
 SanityBateelMainNavigationmenu:
 - mainmenu:
-   Pagetitle: "Homepage"
+   Pagetitle: "Header"
+
+SanityBateelFootersection:
+- Footercmslinks:
+   Pagetitle: "Footer"
+- Footerlogo:
+   pagetitle: "footer"
