--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,14 +27,14 @@ jobs:
       - name: Run Tests and Generate Allure Report
         run: |
           mvn clean test
+          mvn allure:report
+
+      - name: Convert Allure Report to HTML
+        run: |
+          allure generate allure-results --clean -o allure-report-html
 
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
         with:
           name: allure-html-report
-          path: allure-report-index/index.html
-
-      - name: Set Allure HTML index report link 
-        if: success()
-        run: |
-          echo "::set-env name=ALLURE_HTML_REPORT_LINK::${{ github.server_url }}/${{ github.repository }}/raw/${{ github.ref }}/allure-report-index/index.html"
+          path: allure-report-html
