--- a/.github/workflows/maven2.yml
+++ b/.github/workflows/maven2.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Set Allure HTML report link 
         if: success()
         run: |
-          echo "::save-state name=allure_html_report_link::https://github.com/SohamQAKrish/Bateel_Automation/tree/main/allure-results"
+          echo "::set-output name=allure_html_report_link::https://github.com/${GITHUB_REPOSITORY}/blob/${GITHUB_REF}/allure-report-html/index.html"
