--- a/.github/workflows/maven2.yml
+++ b/.github/workflows/maven2.yml
@@ -28,11 +28,13 @@ jobs:
       - name: Run Tests and Generate Allure Report
         run: |
           mvn clean test
-          mvn allure:report
-
-      - name: Convert Allure Report to HTML
-        run: |
           allure generate allure-results --clean -o allure-report-html
+
+      - name: Upload Allure Results
+        uses: actions/upload-artifact@v2
+        with:
+          name: allure-results
+          path: allure-results
 
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
@@ -43,4 +45,4 @@ jobs:
       - name: Set Allure HTML report link 
         if: success()
         run: |
-          echo "::set-output name=allure_html_report_link::https://github.com/${{ github.repository }}/allure-results/index.html"
+          echo "::set-output name=allure_html_report_link::https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
