This commit is for footer section story

--- a/src/test/resources/TestData/TestData.yaml
+++ b/src/test/resources/TestData/TestData.yaml
@@ -98,3 +98,17 @@ SanityBateelFootersection:
    Pagetitle: "Footer"
 - Footerlogo:
    pagetitle: "footer"
+- Footersocialmediainstagram:
+   Pagetitle: "footer"
+- FootersocialmediaFacebook:
+   Pagetitle: "footer"
+- FootersocialmediaTwitter:
+   Pagetitle: "footer"
+- FootersocialmediaLinkedin:
+   Pagetitle: "footer"
+- FootersocialmediaYoutube:
+   Pagetitle: "footer"
+- FooterTermsandconditionslink:
+   Pagetitle: "footer"
+- FooterPrivacypolicylink:
+   Pagetitle: "footer"
