--- a/.github/workflows/updated.yml
+++ b/.github/workflows/updated.yml
@@ -1,10 +1,8 @@
 name: Updated flow
-
-on:
+'on':
   push:
     branches:
-      - main
-
+      - '*'
 jobs:
   build:
     name: Build
@@ -12,34 +10,33 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'adopt'
-
+          distribution: adopt
       - name: Set up Chrome
         uses: browser-actions/setup-chrome@v1
         with:
-          version: '97.0.4692.71'  # Specify version 97
-
-      - name: Download ChromeDriver for version 97
-        run: |
+          version: 124.0.6367.91
+      - name: Download ChromeDriver for version 124
+        run: >
           mkdir drivers
-          curl -SL https://chromedriver.storage.googleapis.com/97.0.4692.71/chromedriver_linux64.zip > drivers/chromedriver.zip
-          unzip drivers/chromedriver.zip -d drivers/
-          chmod +x drivers/chromedriver
 
+          curl -SL
+          https://chromedriver.storage.googleapis.com/124.0.6367.91/chromedriver_linux64.zip
+          > drivers/chromedriver.zip
+
+          unzip drivers/chromedriver.zip -d drivers/
+
+          chmod +x drivers/chromedriver
       - name: Run pom.xml file
         run: |
           if [ ! -f "pom.xml" ]; then
             cp pom.xml .
           fi
-
       - name: Resolve Maven dependencies
-        run: mvn dependency:resolve
-
+        run: 'mvn dependency:resolve'
   test:
     name: Run Test
     runs-on: ubuntu-latest
@@ -47,29 +44,29 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'adopt'
-
+          distribution: adopt
       - name: Set up Chrome
         uses: browser-actions/setup-chrome@v1
         with:
-          version: '97.0.4692.71'  # Specify version 97
-
-      - name: Download ChromeDriver for version 97
-        run: |
+          version: 124.0.6367.91
+      - name: Download ChromeDriver for version 124
+        run: >
           mkdir drivers
-          curl -SL https://chromedriver.storage.googleapis.com/97.0.4692.71/chromedriver_linux64.zip > drivers/chromedriver.zip
-          unzip drivers/chromedriver.zip -d drivers/
-          chmod +x drivers/chromedriver
 
+          curl -SL
+          https://chromedriver.storage.googleapis.com/124.0.6367.91/chromedriver_linux64.zip
+          > drivers/chromedriver.zip
+
+          unzip drivers/chromedriver.zip -d drivers/
+
+          chmod +x drivers/chromedriver
       - name: Run tests with WebDriver initialization
         run: |
           mvn clean test
-
   allure-report:
     name: Allure Report
     runs-on: ubuntu-latest
@@ -77,25 +74,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'adopt'
-
+          distribution: adopt
       - name: Generate Allure report
-        run: mvn allure:report
-
+        run: 'mvn allure:report'
       - name: Deploy Allure report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: '${{ secrets.GITHUB_TOKEN }}'
           publish_dir: /allure-results
-
       - name: Get GitHub Pages URL
         id: pages_url
-        run: echo "::set-output name=url::https://SohamQAKrish.github.io/Bateel_Automation/allure-results/index.html"
-
+        run: >-
+          echo "::set-output
+          name=url::https://SohamQAKrish.github.io/Bateel_Automation/allure-results/index.html"
       - name: Display Allure report link
-        run: echo "Allure report available at ${{ steps.pages_url.outputs.url }}"
+        run: 'echo "Allure report available at ${{ steps.pages_url.outputs.url }}"'
