--- a/.github/workflows/updated.yml
+++ b/.github/workflows/updated.yml
@@ -18,16 +18,14 @@ jobs:
       - name: Set up Chrome
         uses: browser-actions/setup-chrome@v1
         with:
-          version: 124.0.6367.91
-      - name: Download ChromeDriver for version 124
+          version: 94.0.4606.61
+      - name: Download ChromeDriver
         run: |
           mkdir drivers
-          cd drivers
-          curl -SL -o chromedriver.zip https://chromedriver.storage.googleapis.com/124.0.6367.91/chromedriver_linux64.zip
-          unzip -l chromedriver.zip  # List contents for debugging
-          unzip chromedriver.zip
-          chmod +x chromedriver
-          cd ..
+          curl -SL -o drivers/chromedriver.zip https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_linux64.zip
+          unzip -l drivers/chromedriver.zip
+          unzip drivers/chromedriver.zip -d drivers/
+          chmod +x drivers/chromedriver
       - name: Run pom.xml file
         run: |
           if [ ! -f "pom.xml" ]; then
@@ -50,16 +48,14 @@ jobs:
       - name: Set up Chrome
         uses: browser-actions/setup-chrome@v1
         with:
-          version: 124.0.6367.91
-      - name: Download ChromeDriver for version 124
+          version: 94.0.4606.61
+      - name: Download ChromeDriver
         run: |
           mkdir drivers
-          cd drivers
-          curl -SL -o chromedriver.zip https://chromedriver.storage.googleapis.com/124.0.6367.91/chromedriver_linux64.zip
-          unzip -l chromedriver.zip  # List contents for debugging
-          unzip chromedriver.zip
-          chmod +x chromedriver
-          cd ..
+          curl -SL -o drivers/chromedriver.zip https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
+          unzip -l drivers/chromedriver.zip
+          unzip drivers/chromedriver.zip -d drivers/
+          chmod +x drivers/chromedriver
       - name: Run tests with WebDriver initialization
         run: mvn clean test
   allure-report:
