--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,8 +3,7 @@ name: CI/CD
 on:
   push:
     branches:
-      - IAT-4
-
+      - '*'
 jobs:
   build:
     runs-on: windows-latest
@@ -12,8 +11,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          ref: IAT-4  # Checkout the IAT-4 branch
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
@@ -29,12 +26,22 @@ jobs:
           mvn clean test
           mvn allure:report
 
-      - name: Convert Allure Report to HTML
+      - name: Download Allure results
+        uses: actions/download-artifact@v2
+        with:
+          name: allure-results
+          path: .
+
+      - name: Generate Allure HTML Report
         run: |
           allure generate allure-results --clean -o allure-report-html
 
-      - name: Upload HTML Allure Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: allure-html-report
-          path: allure-report-html
+      - name: Set Allure HTML report link 
+        if: success()
+        run: |
+          echo "::set-output name=allure_html_report_link::file://${{ github.workspace }}/allure-report-html/index.html"
+
+      - name: Open Allure HTML report
+        if: success()
+        run: |
+          start "" "${{ github.workspace }}/allure-report-html/index.html"
