"Changed logic on yml workflow"
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,10 +23,16 @@ jobs:
 
       - name: Run Tests and Generate Allure Report
         run: |
-          mvn clean test
+          mvn clean test -Dallure.results.directory=allure-results
           mvn allure:report
 
-      - name: Download Allure results
+      - name: Upload Allure Results as Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: allure-results
+          path: allure-results
+
+      - name: Download Allure Results
         uses: actions/download-artifact@v2
         with:
           name: allure-results
