--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,28 +26,17 @@ jobs:
           mvn clean test -Dallure.results.directory=allure-results
           mvn allure:report
 
-      - name: Upload Allure Results as Artifact
+          - name: Convert Allure Report to HTML
+          run: |
+            allure generate allure-results --clean -o allure-report-html
+  
+      - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
         with:
-          name: allure-results
-          path: allure-results
-
-      - name: Download Allure results
-        uses: actions/download-artifact@v2
-        with:
-            name: allure-results
-            path: allure-results 
-
-      - name: Generate Allure HTML Report
-        run: |
-          allure generate D:\a\Bateel_Automation\Bateel_Automation\allure-results --clean -o allure-report-html
-
+            name: allure-html-report
+            path: allure-report-html
+  
       - name: Set Allure HTML report link 
         if: success()
         run: |
-          echo "::set-output name=allure_html_report_link::file://${{ github.workspace }}/allure-report-html/index.html"
-
-      - name: Open Allure HTML report
-        if: success()
-        run: |
-            start "" "D:\\a\\Bateel_Automation\\Bateel_Automation\\allure-report-html\\index.html"
+            echo "::set-output name=allure_html_report_link::https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
