--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
             <version>2.12.0</version>
             <configuration>
                 <!-- Specify the directory to generate the Allure report -->
-        <reportDirectory>${project.basedir}/allure-report-html</reportDirectory>
+        <reportDirectory>${project.basedir}/allure-results</reportDirectory>
             </configuration>
             <!-- Bind the Allure Maven plugin to the site phase -->
             <executions>
