--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run Tests and Generate Allure Report
         run: |
           mvn clean test site
-          mvn allure:report -Dallure.results.directory=allure-results
+          mvn allure:report
       - name: Convert Allure Report to HTML
         run: |
           allure generate allure-results --clean -o allure-report-html
