--- a/pom.xml
+++ b/pom.xml
@@ -148,62 +148,64 @@
 		</dependency>
     </dependencies>
 
-    <build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.2.5</version>
-            <configuration>
-                <!-- Use properties for suiteXmlFile -->
-                <suiteXmlFiles>
-                    <suiteXmlFile>${xmlPath}/${suiteXmlFile}</suiteXmlFile>
-                </suiteXmlFiles>
-                <!-- Add other configurations as needed -->
-                <argLine>
-                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                </argLine>
-                <systemPropertyVariables>
-				<allure.results.directory>target/allure-results</allure.results.directory>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<!-- Use properties for suiteXmlFile -->
+					<suiteXmlFiles>
+						<suiteXmlFile>${xmlPath}/${suiteXmlFile}</suiteXmlFile>
+					</suiteXmlFiles>
+					<!-- Add other configurations as needed -->
+					<argLine>
+						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+					</argLine>
+					<systemPropertyVariables>
+						<allure.results.directory>
+							${project.basedir}/target/allure-results</allure.results.directory>
 
-                    <!--suppress UnresolvedMavenProperty -->
-                    <propertyName>${environment}</propertyName>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <propertyName>${browser}</propertyName>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <propertyName>${defaultTimeout}</propertyName>
-                </systemPropertyVariables>
-                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-            </configuration>
-        </plugin>
-        
-        <plugin>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-maven</artifactId>
-            <version>2.12.0</version>
-            <configuration>
-                <!-- Specify the directory to generate the Allure report -->
-        <reportDirectory>${project.basedir}/target/allure-results</reportDirectory>
-           </configuration>
-            <!-- Bind the Allure Maven plugin to the site phase -->
-            <executions>
-                <execution>
-                    <id>allure-report</id>
-                    <phase>site</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-        
-        <!-- Maven compiler plugin configuration -->
+						<!--suppress UnresolvedMavenProperty -->
+						<propertyName>${environment}</propertyName>
+						<!--suppress UnresolvedMavenProperty -->
+						<propertyName>${browser}</propertyName>
+						<!--suppress UnresolvedMavenProperty -->
+						<propertyName>${defaultTimeout}</propertyName>
+					</systemPropertyVariables>
+					<reportsDirectory>
+						${project.build.directory}/surefire-reports</reportsDirectory>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>io.qameta.allure</groupId>
+				<artifactId>allure-maven</artifactId>
+				<version>2.12.0</version>
+				<configuration>
+					<!-- Specify the directory to generate the Allure report -->
+					<reportDirectory>${project.basedir}/target/allure-results</reportDirectory>
+				</configuration>
+				<!-- Bind the Allure Maven plugin to the site phase -->
+				<executions>
+					<execution>
+						<id>allure-report</id>
+						<phase>site</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Maven compiler plugin configuration -->
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.7.0</version>
             <configuration>
-                <!-- Set compiler version to 17 -->
+					<!-- Set compiler version to 17 -->
                 <compilerVersion>17</compilerVersion>
                 <source>17</source>
                 <target>17</target>
