--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Convert Allure Report to HTML
         run: |
           allure generate allure-results --clean -o allure-report-html
+      - name: Customize Allure Link Pattern
+        run: echo "allure.link.myLink.pattern=https://github.com/${{ github.repository }}/tree/IAT-4/allure-report-html/index.html" > allure.properties
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
         with:
