--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,38 +1,50 @@
 name: CI/CD
-'on':
+
+on:
   push:
     branches:
       - '*'
+
 jobs:
   build:
     runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: adopt
+
       - name: Install Allure CLI
         run: npm install -g allure-commandline
+
       - name: Run Tests and Generate Allure Report
         run: |
           mvn clean install
           mvn allure:report
+
       - name: Convert Allure Report to HTML
         run: |
           allure generate allure-results --clean -o allure-report-html
+
+      - name: Copy Allure report files
+        run: |
+          cp -r target/site/allure-maven-plugin allure-report-html  
+
       - name: Customize Allure Link Pattern
-        run: echo "allure.link.myLink.pattern=https://github.com/${{ github.repository }}/tree/IAT-4/allure-report-html/index.html" > allure.properties
+        run: |
+          echo "allure.link.myLink.pattern=https://github.com/${{ github.repository }}/tree/IAT-4/allure-report-html/index.html" > allure.properties
+
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
         with:
           name: allure-report
-          path: allure-report-html
+          path: allure-report-html 
+
       - name: Set Allure HTML report link
         if: success()
-        run: >
-          echo "::set-output
-          name=allure_html_report_link::https://github.com/${{ github.repository
-          }}/actions/runs/${{ github.run_id }}"
+        run: |
+          echo "::set-output name=allure_html_report_link::https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
