--- a/src/test/resources/allure.properties
+++ b/src/test/resources/allure.properties
@@ -1,1 +1,1 @@
-allure.results.directory=${project.build.directory}/allure-results
+allure.results.directory=${project.build.directory}/allure-report-html
