--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,12 +23,11 @@ jobs:
 
       - name: Run Tests and Generate Allure Report
         run: |
-          mvn clean install
-          mvn allure:report
+          mvn clean test
 
       - name: Convert Allure Report to HTML
         run: |
-          allure generate allure-results --clean -o allure-report-html
+          allure generate target/allure-results --clean -o allure-report-html
   
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
