--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,9 @@
 				<groupId>io.qameta.allure</groupId>
 				<artifactId>allure-maven</artifactId>
 				<version>2.12.0</version>
+				<configuration>
+        <resultsDirectory>${project.build.directory}/allure-report-html</resultsDirectory>
+    </configuration>
 				<executions>
 					<execution>
 						<id>allure-report</id>
