--- a/pom.xml
+++ b/pom.xml
@@ -149,32 +149,31 @@
     </dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.5</version>
-				<configuration>
-					<!-- Use properties for suiteXmlFile -->
-					<suiteXmlFiles>
-						<suiteXmlFile>${xmlPath}/${suiteXmlFile}</suiteXmlFile>
-					</suiteXmlFiles>
-					<!-- Add other configurations as needed -->
-					<argLine>
-						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-					</argLine>
-					<systemPropertyVariables>
-						<!--suppress UnresolvedMavenProperty -->
-						<propertyName>${environment}</propertyName>
-						<!--suppress UnresolvedMavenProperty -->
-						<propertyName>${browser}</propertyName>
-						<!--suppress UnresolvedMavenProperty -->
-						<propertyName>${defaultTimeout}</propertyName>
-					</systemPropertyVariables>
-					<reportsDirectory>
-						${project.build.directory}/surefire-reports</reportsDirectory>
-				</configuration>
-			</plugin>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+                <!-- Use properties for suiteXmlFile -->
+                <suiteXmlFiles>
+                    <suiteXmlFile>${xmlPath}/${suiteXmlFile}</suiteXmlFile>
+                </suiteXmlFiles>
+                <!-- Add other configurations as needed -->
+                <argLine>
+                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                </argLine>
+                <systemPropertyVariables>
+                    <!--suppress UnresolvedMavenProperty -->
+                    <propertyName>${environment}</propertyName>
+                    <!--suppress UnresolvedMavenProperty -->
+                    <propertyName>${browser}</propertyName>
+                    <!--suppress UnresolvedMavenProperty -->
+                    <propertyName>${defaultTimeout}</propertyName>
+                </systemPropertyVariables>
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            </configuration>
+        </plugin>
 
 			<plugin>
 				<groupId>io.qameta.allure</groupId>
