"Updated allure maven path in pom"
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
 				<artifactId>allure-maven</artifactId>
 				<version>2.12.0</version>
 				<configuration>
-        <resultsDirectory>${project.build.directory}/allure-report-html</resultsDirectory>
+        <resultsDirectory>${project.build.directory}/allure-report-index</resultsDirectory>
     </configuration>
 				<executions>
 					<execution>
