--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,10 +27,10 @@ jobs:
 
       - name: Convert Allure Report to HTML
         run: |
-          allure generate target/allure-results --clean -o allure-report-html
+          allure generate target/allure-results --clean -o allure-report-index
   
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
         with:
             name: allure-report
-            path: allure-report-html
+            path: allure-report-index
