--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Convert Allure Report to HTML
         run: |
-          allure generate target/allure-results --clean -o allure-report-index
+         allure generate allure-results --clean -o allure-report-index
   
       - name: Upload HTML Allure Report
         uses: actions/upload-artifact@v2
