--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
 		</dependency>
     </dependencies>
 
-	<build>
+	 <build>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -174,40 +174,27 @@
                 <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
             </configuration>
         </plugin>
-
-			<plugin>
-				<groupId>io.qameta.allure</groupId>
-				<artifactId>allure-maven</artifactId>
-				<version>2.12.0</version>
-				<configuration>
-        <resultsDirectory>${project.build.directory}/allure-report-index</resultsDirectory>
-    </configuration>
-				<executions>
-					<execution>
-						<id>allure-report</id>
-						<phase>site</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Maven compiler plugin configuration -->
+        <!-- Add Allure plugin -->
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.7.0</version>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.12.0</version>
             <configuration>
-					<!-- Set compiler version to 17 -->
-                <compilerVersion>17</compilerVersion>
-                <source>17</source>
-                <target>17</target>
-                <testSource>17</testSource>
-                <testTarget>17</testTarget>
+                <resultsDirectory>${project.basedir}/allure-results</resultsDirectory>
             </configuration>
         </plugin>
-    
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <compilerVersion>17</compilerVersion>
+                    <source>17</source>
+                    <target>17</target>
+                    <testSource>17</testSource>
+                    <testTarget>17</testTarget>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
