--- a/src/test/resources/allure.properties
+++ b/src/test/resources/allure.properties
@@ -1,1 +1,1 @@
-allure.results.directory=${project.build.directory}/allure-report-html
+allure.link.myLink.pattern=https://staging2.bateel.com/en_in/{}
