--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Run Tests and Generate Allure Report
         run: |
-          mvn clean install
-          mvn allure:report
+          mvn clean install || true
+          mvn allure:report || true
         continue-on-error: true 
 
       - name: Publish Allure Report to GitHub Pages
@@ -43,4 +43,4 @@ jobs:
         with:
             github_token: ${{ secrets.GH_PAT }}
             publish_dir: ./allure-report-html
-            publish_branch: gh-pages  
+            publish_branch: gh-pages
