--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -27,20 +27,19 @@ jobs:
 
       - name: Run Tests and Generate Allure Report
         run: |
-          mvn clean install || true
-          mvn allure:report || true
-        continue-on-error: true 
+            mvn clean install
+            mvn allure:report
 
       - name: Publish Allure Report to GitHub Pages
-        if: always()
         run: |
           allure generate allure-results --clean -o allure-report-html
           touch allure-report-html/.nojekyll
+        continue-on-error: true 
 
       - name: Deploy to GitHub Pages
-        if: always()
+        if: success()
         uses: peaceiris/actions-gh-pages@v3
         with:
             github_token: ${{ secrets.GH_PAT }}
             publish_dir: ./allure-report-html
-            publish_branch: gh-pages
+            publish_branch: gh-pages  
