--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -19,25 +19,24 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: Create Allure Results Directory
-        run: mkdir allure-results
-
       - name: Install Allure CLI
         run: npm install -g allure-commandline
 
       - name: Run Tests and Generate Allure Report
         run: |
-            mvn clean install
-            mvn allure:report
+          mvn clean test || true
+          mvn allure:report || true
+        continue-on-error: true 
 
       - name: Publish Allure Report to GitHub Pages
+        if: always()  
         run: |
           allure generate allure-results --clean -o allure-report-html
           touch allure-report-html/.nojekyll
         continue-on-error: true 
 
       - name: Deploy to GitHub Pages
-        if: success()
+        if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
             github_token: ${{ secrets.GH_PAT }}
