--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -39,6 +39,6 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GH_PAT }}
+          github_token: ${{ secrets.MY_GITHUB_TOKEN }}
           publish_dir: ./allure-report-html
           publish_branch: gh-pages 
