--- a/.github/workflows/mavenshm.yml
+++ b/.github/workflows/mavenshm.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Run Tests
         run: mvn clean test -DskipTests
+        continue-on-error: true
+        
 
   allure-report:
     runs-on: windows-latest
