"Added a log in test classes and code formating done on IAT-4 branch"
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/src/test/resources/TestData/Environments.yaml
+++ b/src/test/resources/TestData/Environments.yaml
@@ -1,7 +1,7 @@
 QA:
   ApplicationURL: "https://staging2.bateel.com/en_in/"
   Email: "govind.daware+ind@krishtechnolabs.com"
-  Password: "Govind31"
+  Password: "R292aW5kMzE="
 
 TESTRAIL:
  URL: "https://teem.testrail.net"
