--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration and Deployment - Kashyap
+name: Continuous Integration and Deployment | Kashyap
 on:
   push:
     branches:
