"Updated workflow yml for main branch set up and locally working"
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -2,10 +2,11 @@ name: Continuous Integration and Deployment | Kashyap
 on:
   push:
     branches:
+      - main
       - IAT-4
   pull_request:
     branches:
-      - IAT-4
+      - main
   workflow_dispatch:
     inputs:
       suite:
