"Added continue on error line in yml"
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/.github/workflows/mavenGH.yml
+++ b/.github/workflows/mavenGH.yml
@@ -52,6 +52,7 @@ jobs:
 
       - name: Run Tests
         run: mvn clean test
+        continue-on-error: true
 
   allure-report:
     runs-on: windows-latest
