"Added Transaction Flow"
Signed-off-by: Shivam Rai <shivam.rai@krishtechnolabs.local>

--- a/src/test/resources/TestData/TestData.yaml
+++ b/src/test/resources/TestData/TestData.yaml
@@ -141,10 +141,25 @@ SanityBateelLiveCheckoutWithInvalidCardDetails:
       BateelGuestStreetname: "123, Main Street" 
       BateelGuestCityxpath: "Abu Dhabi"   
       BateelGuestCountryName: "India"  
-      BateelGuestPostcodeName: "110001"  
-      BateelGuestStateName: "Delhi"     
+      BateelGuestPostcodeName: "20000"  
+      BateelGuestStateName: "Abu Dabhi"     
       BateelGuestTelephoneName: "500000000" 
-      CARDNUMBER: "4242 4242 4242 4242"
-      CARDEXPIRY: "12/26"
-      CARDCVV: "123"
+      CARDNUMBER: "4988 4388 4388 4305"
+      CARDEXPIRY: "03/30"
+      CARDCVV: "100"
+SanityBateelLiveCheckout:
+   - testBateelLiveCheckout:
+      country: "United Arab Emirates"
+      BateelGuestFname: "KD"  
+      BateelGuestLname: "Test"  
+      BateelGuestLname: "Testing"  
+      BateelGuestStreetname: "123, Main Street"
+      BateelGuestCityxpath: "Abu Dhabi"  
+      BateelGuestCountryName: "India"  
+      BateelGuestPostcodeName: "20000"  
+      BateelGuestStateName: "Abu Dabhi"    
+      BateelGuestTelephoneName: "500000000"
+      CARDNUMBER: "4988 4388 4388 4305"
+      CARDEXPIRY: "03/30"
+      CARDCVV: "737"
      
