Created a new login script and local suite run success.
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/src/test/resources/TestData/TestData.yaml
+++ b/src/test/resources/TestData/TestData.yaml
@@ -127,3 +127,5 @@ SanityBateelFootersection:
    Pagetitle: "footer"
 - FooterPrivacypolicylink:
    Pagetitle: "footer"
+SanityBateelLogin:
+ - customerlogintest:
