--- a/.github/workflows/CI_CD_Integration_Bateel.yml
+++ b/.github/workflows/CI_CD_Integration_Bateel.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main  # Triggers on push to main branch
-  workflow_dispatch:  # Allows manual triggering
+  workflow_dispatch:
     inputs:
       suite:
         description: 'Select test suite'
