Updated workflow and added ssh key in repo setting
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/.github/workflows/CI_CD_Integration_Bateel.yml
+++ b/.github/workflows/CI_CD_Integration_Bateel.yml
@@ -3,7 +3,7 @@ name: CI/CD Integration Bateel
 on:
   push:
     branches:
-      - main  # Triggers on push to main branch
+      - main 
   workflow_dispatch:
     inputs:
       suite:
